--- a/main.html
+++ b/main.html
@@ -8,6 +8,35 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="" method="post">
+        <div>
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="Name">
+        </div>
+        <div>
+            <label for="phone">Phone Number</label>
+        <input type="text" id="phone" placeholder="Phone Number">
+        </div>
+        <div>
+            <label for="address">Address</label>
+            <input type="text" id="address" placeholder="Address">
+        </div>
+        <div>
+            <label for="checkbox">Have you ever lived with a Dog before?</label>
+            <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+        </div>
+        <div>
+            <label for="multiSelect">Please select your preferred breeds</label>
+            <select name="multiSelect" id="multiSelect">
+                <option value="pug">Pug</option>
+                <option value="beagle">Beagle</option>
+                <option value="poodle">Poodle</option>
+            </select>
+        </div>
+        <div>
+            <input type="submit" id="submit" value="Submit">
+        </div>
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
